@@ -29,6 +29,13 @@ class RemoteUsaEpayTransactionTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_purchase_with_echeck_and_extra_options
+    extra_options = @options.merge(check_format: 'ARC')
+    assert response = @gateway.purchase(@amount, @check, extra_options)
+    assert_equal 'Success', response.message
+    assert_success response
+  end
+
   def test_successful_authorization_with_manual_entry
     @credit_card.manual_entry = true
     assert response = @gateway.authorize(@amount, @credit_card, @options)
